--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <meta name="keywords" content="write youe website keywords split by , here">
     <meta name="description" content="write youe website keywords in here">
 
-    <link rel="stylesheet" href="./css/jemdoc.css" type="text/css">
+    <link rel="stylesheet" href="./jemdoc.css" type="text/css">
     <!-- change the follow title-->
     <title>Write website title here</title>
 
-    <script type="text/javascript" async="" src="./css/ga.js"></script>
+    <script type="text/javascript" async="" src="./ga.js"></script>
     <script type="text/javascript">
         var _gaq = _gaq || [];
         _gaq.push(['_setAccount', 'UA-39824124-1']);
