--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </h3>
                         <p>
                             <a href='https://scms.fudan.edu.cn/index.htm'>Shanghai Center for Mathematical Sciences</a> &nbsp; <a href='https://scms.fudan.edu.cn/index.htm'>上海数学中心</a> <br>
-                            <a href=''>Fudan University</a> &nbsp; <a href=''>复旦大学</a> <br>
+                            <a href='https://www.fudan.edu.cn/'>Fudan University</a> &nbsp; <a href='https://www.fudan.edu.cn/'>复旦大学</a> <br>
                             <br> Email: <a href="mailto:luxinbao@fudan.edu.cn">luxinbao@fudan.edu.cn</a><br>
                             <!-- change the follow to your link-->
                    
@@ -178,20 +178,22 @@
     </div>
 
 
-    <h2>Biography</h2>
+    <h2>Research interests</h2>
     <p>
-        I am ...(write your biography)
+        Convex Geometry, Geometric Analysis.
     </p>
     <p>
-        I am advised by ...(write your biography)
+        凸体几何，几何分析。
     </p>
 
-    <h2>Education & Experience</h2>
+    <h2>Education</h2>
     <ul>
         <li>
-            year.month-year.month &nbsp;&nbsp;&nbsp;&nbsp;<b>School name</b>
+            Tongji University, Shanghai, China
         </li>
-        <b>your educational background</b>, your current major
+        Ph.D in Mathematics, June, 2022
+	    
+	Thesis Advisor: Prof. Ge Xiong
 
 
         <li>
