--- a/index.html
+++ b/index.html
@@ -192,21 +192,20 @@
             Tongji University, Shanghai, China
         </li>
         Ph.D in Mathematics, June, 2022
-	    
-	Thesis Advisor: Prof. Ge Xiong
-
+	    <br>Thesis Advisor: <a href="https://math.tongji.edu.cn/info/1115/8292.htm">Prof. Ge Xiong (熊革)</a>
+	    <br>Thesis Topic: Affine isoperimetric inequalities and Minkowski problems for the electrostatic capacity
 
         <li>
-            year.month-year.month &nbsp;&nbsp;&nbsp;&nbsp;<b>School name</b>
+            Tongji University, Shanghai, China
         </li>
-        <b>your educational background</b>, your current major
+        B.S. in Mathematics, June, 2017
     </ul>
 
-    <h2>Professional Activities</h2>
+    <h2>Publications</h2>
     <ul>
-        <h4>Journal Reviewer<small>[<a href="https://publons.com/researcher/3026890/yirong-chen/peer-review/">Publons</a>]</small?</h4>
-	      <li><em><a href="https://publons.com/researcher/3026890/yirong-chen/peer-review/">IEEE Photonics Journal</a></em> (<b>PJ</b>)</li>
-	      <li><em><a href="https://publons.com/researcher/3026890/yirong-chen/peer-review/">IEEE Access</a></em> (<b>Access</b>)</li>
+        <li>
+		
+	</li>
      </ul>
 
 
