--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             s.parentNode.insertBefore(ga, s);
         })();
     </script>
+	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+	<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
     <style id="nightModeStyle">
         html.cye-enabled.cye-nm:not(*:-webkit-full-screen-ancestor) body,
@@ -150,7 +152,7 @@
                     <td width="670">
                         <div id="toptitle">
                             <!-- change the follow as the page iner title-->
-                            <h1><a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=1443214">Xinbao Lu</a> &nbsp; <a href="https://mathscinet.ams.org/mathscinet/search/author.html?mrauthid=1443214">鲁新宝</a> </h1>
+                            <h1>Xinbao Lu &nbsp; 鲁新宝 </h1>
                             <h1>
 
                             </h1>
@@ -204,7 +206,7 @@
     <h2>Publications</h2>
     <ul>
         <li>
-		
+		The \(Lp\) John ellipsoids for negative indices, (with G. Xiong), to appear in Israel J. Math.
 	</li>
      </ul>
 
