--- a/index.html
+++ b/index.html
@@ -193,27 +193,28 @@
         <li>
             Tongji University, Shanghai, China
         </li>
-        Ph.D in Mathematics, June, 2022
+        <br>Ph.D in Mathematics, June, 2022
 	    <br>Thesis Advisor: <a href="https://math.tongji.edu.cn/info/1115/8292.htm">Prof. Ge Xiong (熊革)</a>
 	    <br>Thesis Topic: Affine isoperimetric inequalities and Minkowski problems for the electrostatic capacity
 
         <li>
             Tongji University, Shanghai, China
         </li>
-        B.S. in Mathematics, June, 2017
+        <br>B.S. in Mathematics, June, 2017
     </ul>
 
     <h2>Publications</h2>
     <ul>
         <li>
-		The \(Lp\) John ellipsoids for negative indices, (with G. Xiong), to appear in <i>Israel J. Math.</i>
+		The \(L_p\) John ellipsoids for negative indices, (with G. Xiong), to appear in <i>Israel J. Math.</i>
 	</li>
 	<li>
-		The \(Lp\) Minkowski problem for the electrostatic \(\mathfrak{p}\)-capacity for \(\mathfrak{p}\geqslant n\), (with G. Xiong), <i>Indiana Univ. Math. J.</i> 70 (2021) 1869–1901.
+		The \(L_p\) Minkowski problem for the electrostatic \(\mathfrak{p}\)-capacity for \(\mathfrak{p}\geqslant n\), (with G. Xiong), <i>Indiana Univ. Math. J.</i> 70 (2021) 1869-1901.
 	</li>
 	<li>
-		A new approach to the Minkowski first mixed volume and the LYZ conjecture, (with Q. Sun and G. Xiong), <i>Discrete Comput. Geom.</i> 66 (2021), no. 1, 122–139.
+		A new approach to the Minkowski first mixed volume and the LYZ conjecture, (with Q. Sun and G. Xiong), <i>Discrete Comput. Geom.</i> 66 (2021) 122-139.
 	</li>
+	    123456789
      </ul>
 
             <p>
@@ -223,3 +224,4 @@
 </body>
 
 </html>
+
