--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </td>
                     <td>
                         <div style="float:right">
-                            <img src="/images/cyr_scut_by.jpg" border="0" width="230">
+                            <img src="/luxinbao.jpg" border="0" width="230">
                         </div>
                     </td>
                 </tr>
@@ -209,12 +209,11 @@
 		The \(L_p\) John ellipsoids for negative indices, (with G. Xiong), to appear in <i>Israel J. Math.</i>
 	</li>
 	<li>
-		The \(L_p\) Minkowski problem for the electrostatic \(\mathfrak{p}\)-capacity for \(\mathfrak{p}\geqslant n\), (with G. Xiong), <i>Indiana Univ. Math. J.</i> 70 (2021) 1869-1901.
+		<a href="https://www.iumj.indiana.edu/IUMJ/fulltext.php?artid=8719&year=2021&volume=70">The \(L_p\) Minkowski problem for the electrostatic \(\mathfrak{p}\)-capacity for \(\mathfrak{p}\geqslant n\)</a>, (with G. Xiong), <i>Indiana Univ. Math. J.</i> 70 (2021) 1869-1901.
 	</li>
 	<li>
-		A new approach to the Minkowski first mixed volume and the LYZ conjecture, (with Q. Sun and G. Xiong), <i>Discrete Comput. Geom.</i> 66 (2021) 122-139.
+		<a href="https://link.springer.com/article/10.1007/s00454-019-00148-0">A new approach to the Minkowski first mixed volume and the LYZ conjecture, (with Q. Sun and G. Xiong)</a>, <i>Discrete Comput. Geom.</i> 66 (2021) 122-139.
 	</li>
-	    123456789
      </ul>
 
             <p>
