--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     </td>
                     <td>
                         <div style="float:right">
-                            <img src="/luxinbao.jpg" border="0" width="230">
+                            <img src="/luxinbao.jpg" border="0" width="300">
                         </div>
                     </td>
                 </tr>
@@ -216,9 +216,15 @@
 	</li>
      </ul>
 
-            <p>
-            </p>
-
+     <h2>Talks</h2>
+     <ul>
+	 <li>
+		On the applications and generalizations of the cone-volume functional, CICDG2020, Huazhong University of Science and Technology, Wuhan, Nov. 5-8, 2020.
+	     </li>
+	     <li>
+		     \(L_p\) John ellipsoids for negative indices, CICDG2021, Hebei Normal University, Shijiazhuang, Jan. 7-9, 2022.
+	     </li>
+</ul>
 
 </body>
 
