--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
         <li>
             Tongji University, Shanghai, China
         </li>
-        <br>Ph.D in Mathematics, June, 2022
+        Ph.D in Mathematics, June, 2022
 	    <br>Thesis Advisor: <a href="https://math.tongji.edu.cn/info/1115/8292.htm">Prof. Ge Xiong (熊革)</a>
 	    <br>Thesis Topic: Affine isoperimetric inequalities and Minkowski problems for the electrostatic capacity
 
         <li>
             Tongji University, Shanghai, China
         </li>
-        <br>B.S. in Mathematics, June, 2017
+        B.S. in Mathematics, June, 2017
     </ul>
 
     <h2>Publications</h2>
