--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 		<a href="https://www.iumj.indiana.edu/IUMJ/fulltext.php?artid=8719&year=2021&volume=70">The \(L_p\) Minkowski problem for the electrostatic \(\mathfrak{p}\)-capacity for \(\mathfrak{p}\geqslant n\)</a>, (with G. Xiong), <i>Indiana Univ. Math. J.</i> 70 (2021) 1869-1901.
 	</li>
 	<li>
-		<a href="https://link.springer.com/article/10.1007/s00454-019-00148-0">A new approach to the Minkowski first mixed volume and the LYZ conjecture, (with Q. Sun and G. Xiong)</a>, <i>Discrete Comput. Geom.</i> 66 (2021) 122-139.
+		<a href="https://link.springer.com/article/10.1007/s00454-019-00148-0">A new approach to the Minkowski first mixed volume and the LYZ conjecture</a>, (with Q. Sun and G. Xiong), <i>Discrete Comput. Geom.</i> 66 (2021) 122-139.
 	</li>
      </ul>
 
